wip on the validation
