# storage/api-docs/api-docs.json
@@ -28,18 +28,21 @@
                 "description": "Simple ping to check if its a proper request.",
                 "operationId": "App\\Http\\Controllers\\Api\\V1\\Controller::index",
                 "responses": {
+                    "200": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
                     "401": {
                         "description": "Unauthenticated"
                     },
                     "403": {
                         "description": "Unauthorized for current cooperation"
                     }
-                },
-                "security": [
-                    {
-                        "bearer_token": []
-                    }
-                ]
+                }
             }
         },
         "/v1/register": {
